--- a/projects/admin/src/app/components/media-details/media-details.component.html
+++ b/projects/admin/src/app/components/media-details/media-details.component.html
@@ -5,6 +5,6 @@
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onCancelClick()" i18n>cancel</button>
-  <button mat-button [mat-dialog-close]="data.name" i18n>save</button>
+  <button mat-button (click)="onCancelClick()">{{ translations.cancel }}</button>
+  <button mat-button [mat-dialog-close]="data.name">{{ translations.save }}</button>
 </div>
