--- a/projects/admin/src/models/hooks/user/roles-form/roles-form.component.html
+++ b/projects/admin/src/models/hooks/user/roles-form/roles-form.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-  <mat-label i18n>roles</mat-label>
+  <mat-label>{{ translation.roles }}</mat-label>
   <mat-select [formControl]="formControl" multiple>
     @for (option of options; track option) {
       <mat-option [value]="option">{{ translations[option] }}</mat-option>
