--- a/projects/admin/src/app/components/create-path-instance-dialog/create-path-instance-dialog.component.html
+++ b/projects/admin/src/app/components/create-path-instance-dialog/create-path-instance-dialog.component.html
@@ -1,12 +1,9 @@
-<h2 mat-dialog-title>
-  <ng-container i18n>create path instance</ng-container>
-  : {{ path.name }}
-</h2>
+<h2 mat-dialog-title>{{ translations.pathInstance }}: {{ path.name }}</h2>
 <mat-dialog-content>
   <app-dynamic-fields [excludeFields]="excludeFields" [formControl]="formValue" [entityName]="pathInstanceName" />
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-raised-button mat-dialog-close color="accent" i18n>cancel</button>
+  <button mat-raised-button mat-dialog-close color="accent">{{ translations.cancel }}</button>
   <button
     mat-raised-button
     cdkFocusInitial
@@ -14,6 +11,6 @@
     [disabled]="formValue.invalid"
     (click)="createPathInstance()"
   >
-    <ng-container i18n>create path instance</ng-container>
+    {{ translations.pathInstance }}
   </button>
 </mat-dialog-actions>
