--- a/projects/admin/src/app/shared/components/data-table/actions-data-table/actions-data-table.component.html
+++ b/projects/admin/src/app/shared/components/data-table/actions-data-table/actions-data-table.component.html
@@ -1,5 +1,7 @@
-<button mat-raised-button [routerLink]="['../../', 'edit', entityName, record.id]" color="primary" i18n>edit</button>
-<button mat-raised-button (click)="removeRecord()" color="warn" i18n>remove</button>
+<button mat-raised-button [routerLink]="['../../', 'edit', entityName, record.id]" color="primary">
+  {{ translations.edit }}
+</button>
+<button mat-raised-button (click)="removeRecord()" color="warn">{{ translations.remove }}</button>
 @for (action of actions; track $index) {
   <button mat-raised-button (click)="doAction(action, record)">{{ action.label }}</button>
 }
