--- a/projects/admin/src/app/shared/components/data-table/filter-data-table/filter-data-table.component.html
+++ b/projects/admin/src/app/shared/components/data-table/filter-data-table/filter-data-table.component.html
@@ -1,12 +1,12 @@
 <div class="filter-container">
   <button mat-flat-button class="square-button" color="primary" (click)="triggerSearch()" [disabled]="filters.invalid">
     <mat-icon>search</mat-icon>
-    <span class="filter-field">Search</span>
+    <span class="filter-field">{{ translations.search }}</span>
   </button>
 
   <button mat-flat-button class="square-button" color="primary" (click)="toggleFilterList()">
     <mat-icon>filter_list</mat-icon>
-    <span class="filter-field">Filters</span>
+    <span class="filter-field"> {{ translations.filters }}</span>
   </button>
   <button mat-icon-button color="primary" (click)="addFilter(); toggleAndAddFilter()">
     <mat-icon>add</mat-icon>
@@ -24,7 +24,7 @@
   <ng-container *ngFor="let filter of filters.controls; let idx = index">
     <div [formGroup]="filter" class="filter-container">
       <mat-form-field>
-        <mat-label>field</mat-label>
+        <mat-label>{{ translations.field }}</mat-label>
         <mat-select [formControl]="filter.controls.field" required>
           <mat-option *ngFor="let property of schema | keyvalue" [value]="property.key">
             {{ property.value.guiInfo.label }}
@@ -34,19 +34,16 @@
 
       @if (filter.controls.field.value) {
         <mat-form-field>
-          <mat-label>operator</mat-label>
+          <mat-label>{{ translations.operator }}</mat-label>
           <mat-select [formControl]="filter.controls.operator" required>
-            <mat-option
-              *ngFor="let operator of typeOperator[filter.controls.type.value]; let i = index"
-              [value]="operator"
-            >
+            <mat-option *ngFor="let operator of typeOperator[filter.controls.type.value]" [value]="operator">
               {{ operator }}
             </mat-option>
           </mat-select>
         </mat-form-field>
 
         <mat-form-field>
-          <mat-label>value</mat-label>
+          <mat-label>{{ translations.value }}</mat-label>
           <input matInput [type]="filter.controls.type.value" [formControl]="filter.controls.value" required />
         </mat-form-field>
       }
