--- a/projects/admin/src/app/shared/components/data-table/actions-data-table/actions-data-table.component.html
+++ b/projects/admin/src/app/shared/components/data-table/actions-data-table/actions-data-table.component.html
@@ -1,7 +1,7 @@
 <button mat-raised-button [routerLink]="['../../', 'edit', entityName, record.id]" color="primary">
   {{ translations.edit }}
 </button>
-<button mat-raised-button (click)="removeRecord()" color="warn">{{ translations.remove }}</button>
+<button mat-raised-button (click)="removeRecord(); openSnackBar()" color="warn">{{ translations.remove }}</button>
 @for (action of actions; track $index) {
   <button mat-raised-button (click)="doAction(action, record)">{{ action.label }}</button>
 }
