--- a/projects/admin/src/models/hooks/user/roles-form/roles-form.component.html
+++ b/projects/admin/src/models/hooks/user/roles-form/roles-form.component.html
@@ -1,8 +1,8 @@
 <mat-form-field>
-  <mat-label>{{ translation.roles }}</mat-label>
+  <mat-label>{{ translations.general.roles }}</mat-label>
   <mat-select [formControl]="formControl" multiple>
     @for (option of options; track option) {
-      <mat-option [value]="option">{{ translations[option] }}</mat-option>
+      <mat-option [value]="option">{{ translations.role[option] }}</mat-option>
     }
   </mat-select>
 </mat-form-field>
