--- a/projects/admin/src/app/components/user-profile/user-profile.component.html
+++ b/projects/admin/src/app/components/user-profile/user-profile.component.html
@@ -2,41 +2,45 @@
   <mat-card class="mat-card-ed">
     <mat-card-content>
       <form [formGroup]="form">
-        <h2>{{ translations.editUser }}</h2>
+        <h2>{{ translations.general.editUser }}</h2>
         <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
-          <mat-label>{{ translations.name }}</mat-label>
+          <mat-label>{{ translations.general.name }}</mat-label>
           <input formControlName="name" type="text" matInput placeholder="Edit Your Name" required />
         </mat-form-field>
 
         <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
-          <mat-label>{{ translations.language }}</mat-label>
+          <mat-label>{{ translations.general.language }}</mat-label>
           <mat-select formControlName="language">
-            <mat-option *ngFor="let language of languages" [value]="language">{{ translation[language] }}</mat-option>
+            <mat-option *ngFor="let language of languages" [value]="language">{{
+              translations.language[language]
+            }}</mat-option>
           </mat-select>
         </mat-form-field>
       </form>
     </mat-card-content>
     <mat-card-actions>
       <button mat-raised-button color="primary" [disabled]="form.invalid" (click)="save()">
-        {{ translations.save }}
+        {{ translations.general.save }}
       </button>
-      <button mat-raised-button color="warn">{{ translations.cancel }}</button>
+      <button mat-raised-button color="warn" (click)="cancel()">
+        {{ translations.general.cancel }}
+      </button>
     </mat-card-actions>
   </mat-card>
 
   <mat-card class="mat-card-ed">
     <mat-card-content>
       <form [formGroup]="passordForm">
-        <h2>{{ translations.resetPassword }}</h2>
+        <h2>{{ translations.general.resetPassword }}</h2>
         <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
-          <mat-label>{{ translations.password }}</mat-label>
+          <mat-label>{{ translations.general.password }}</mat-label>
           <input formControlName="password" type="password" matInput placeholder="Edit Your Password" />
           <mat-error *ngIf="passordForm.controls.password.hasError('minlength')">
-            {{ translations.passwordMinlength }}
+            {{ translations.general.passwordMinlength }}
           </mat-error>
         </mat-form-field>
         <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
-          <mat-label>{{ translations.password }}</mat-label>
+          <mat-label>{{ translations.general.password }}</mat-label>
           <input
             formControlName="confirmpassword"
             type="password"
@@ -46,16 +50,18 @@
             required
           />
           <mat-error *ngIf="passordForm.controls.confirmpassword.hasError('passwordmatcherror')">{{
-            translations.passwordMatch
+            translations.general.passwordMatch
           }}</mat-error>
         </mat-form-field>
       </form>
     </mat-card-content>
     <mat-card-actions>
       <button mat-raised-button color="primary" [disabled]="passordForm.invalid" (click)="resetPassword()">
-        {{ translations.save }}
+        {{ translations.general.save }}
       </button>
-      <button mat-raised-button color="warn">{{ translations.cancel }}</button>
+      <button mat-raised-button color="warn" (click)="resetPasswordForm()">
+        {{ translations.general.cancel }}
+      </button>
     </mat-card-actions>
   </mat-card>
 </div>
