link with old system

--- a/projects/lms/src/app/core/components/exam/components/multi-choice/multi-choice.component.html
+++ b/projects/lms/src/app/core/components/exam/components/multi-choice/multi-choice.component.html
@@ -6,5 +6,5 @@
   [class.wrong]="checkAnswer() && !answer.correct && checked[i]"
   [disabled]="checkAnswer()"
 >
-  {{ answer.title }}
+  {{ answer.name }}
 </mat-checkbox>
