--- a/projects/lms/src/app/core/components/exam/exam.component.html
+++ b/projects/lms/src/app/core/components/exam/exam.component.html
@@ -3,7 +3,7 @@
 </ng-container>
 
 <div class="question" *ngFor="let q of questions; let i = index">
-  <h3>{{ q.title }} ({{ q.mark }}) {{ translationKeys.lesson_mark | translate }}</h3>
+  <h3>{{ q.name }} ({{ q.mark }}) {{ translationKeys.lesson_mark | translate }}</h3>
   <ng-container [ngSwitch]="q.questionType">
     <app-single-choice *ngSwitchCase="qt.SingleChoice" [qIndex]="i"></app-single-choice>
     <app-multi-choice *ngSwitchCase="qt.MultiChoice" [qIndex]="i"></app-multi-choice>
