--- a/projects/lms/src/app/user-pages/pages/lesson/lesson.component.html
+++ b/projects/lms/src/app/user-pages/pages/lesson/lesson.component.html
@@ -1,12 +1,12 @@
 <h4 class="header">
-  {{ translationKeys.course | translate }}: {{ course.title }}, {{ translationKeys.lesson | translate }}:
-  {{ lesson.title }}
+  {{ translationKeys.course | translate }}: {{ course.name }}, {{ translationKeys.lesson | translate }}:
+  {{ lesson.name }}
 </h4>
 <mat-tab-group class="panel">
   <mat-tab label="{{ translationKeys.lesson | translate }}">
     <div [innerHTML]="lesson.description"></div>
-    <audio *ngIf="lesson.audio" controls>
-      <source src="{{ lesson.audio }}" type="audio/mpeg" />
+    <audio *ngIf="lesson.audioUrl" controls>
+      <source src="{{ lesson.audioUrl }}" type="audio/mpeg" />
     </audio>
     <ngx-extended-pdf-viewer
       #pdfView
@@ -52,19 +52,19 @@
     ></iframe> -->
   </mat-tab>
   <mat-tab label="{{ translationKeys.questions | translate }}" *ngIf="lesson.questions as questions">
-    <h4 *ngIf="lesson.mark">
-      {{ translationKeys.your_result | translate : { result: lesson.mark, total: questions.length } }}
+    <h4 *ngIf="studentLesson?.mark">
+      {{ translationKeys.your_result | translate: { result: studentLesson?.mark, total: questions.length } }}
     </h4>
     <app-exam
       [questions]="questions"
-      [done]="!!lesson.mark"
-      [answeredOptions]="lesson.answeredOptions"
+      [done]="!!studentLesson?.answeredOptions"
+      [answeredOptions]="studentLesson?.answeredOptions"
       (finishExam)="finishExam($event)"
     ></app-exam>
   </mat-tab>
 </mat-tab-group>
 <div class="panel">
-  <mat-checkbox [checked]="lesson.done" (change)="finishLesson($event.checked)">{{
+  <mat-checkbox [checked]="studentLesson?.done" (change)="finishLesson($event.checked)">{{
     translationKeys.lesson_finished | translate
   }}</mat-checkbox>
 </div>
