--- a/projects/lms/src/app/user-pages/pages/path/path.component.html
+++ b/projects/lms/src/app/user-pages/pages/path/path.component.html
@@ -3,9 +3,9 @@
 </ng-container>
 <ng-container *ngIf="!loadingService.loading()">
   <ng-container *ngIf="openPathResponse() as openPathResponse">
-    <div *ngFor="let path of openPathResponse.data" class="panel course">
+    <div *ngFor="let path of openPathResponse" class="panel course">
       {{ path.id }}
-      <div class="title">{{ path.title }}</div>
+      <div class="title">{{ path.name }}</div>
       <div class="sub-title" [innerHTML]="getDescription(path.description)"></div>
       <img mat-card-image src="/assets/logo.svg" />
       <button mat-fab extended color="primary" (click)="register(path.id)">
@@ -13,7 +13,7 @@
       </button>
     </div>
 
-    <div *ngIf="!openPathResponse.data?.length">
+    <div *ngIf="!openPathResponse.length">
       {{ translationKeys.path.no_path_open | translate }}
     </div>
   </ng-container>
