--- a/projects/admin/src/app/components/user-profile/user-profile.component.html
+++ b/projects/admin/src/app/components/user-profile/user-profile.component.html
@@ -1,67 +1,34 @@
-<div class="card-container">
-  <mat-card class="mat-card-ed">
-    <mat-card-content>
-      <form [formGroup]="form">
-        <h2>{{ translations.general.editUser }}</h2>
-        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
-          <mat-label>{{ translations.general.name }}</mat-label>
-          <input formControlName="name" type="text" matInput placeholder="Edit Your Name" required />
-        </mat-form-field>
+@if (user) {
+  <div class="card-container">
+    <mat-card class="mat-card-ed">
+      <mat-card-content>
+        <form [formGroup]="form">
+          <h2>{{ translations.general.editUser }}</h2>
+          <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
+            <mat-label>{{ translations.general.name }}</mat-label>
+            <input formControlName="name" type="text" matInput placeholder="Edit Your Name" required />
+          </mat-form-field>
 
-        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
-          <mat-label>{{ translations.general.language }}</mat-label>
-          <mat-select formControlName="language">
-            <mat-option *ngFor="let language of languages" [value]="language">{{
-              translations.language[language]
-            }}</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </form>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button color="primary" [disabled]="form.invalid" (click)="save()">
-        {{ translations.general.save }}
-      </button>
-      <button mat-raised-button color="warn" (click)="cancel()">
-        {{ translations.general.cancel }}
-      </button>
-    </mat-card-actions>
-  </mat-card>
+          <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
+            <mat-label>{{ translations.general.language }}</mat-label>
+            <mat-select formControlName="language">
+              <mat-option *ngFor="let language of languages" [value]="language">{{
+                translations.language[language]
+              }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </form>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-raised-button color="primary" [disabled]="form.invalid" (click)="save()">
+          {{ translations.general.save }}
+        </button>
+        <button mat-raised-button color="warn" (click)="cancel()">
+          {{ translations.general.cancel }}
+        </button>
+      </mat-card-actions>
+    </mat-card>
 
-  <mat-card class="mat-card-ed">
-    <mat-card-content>
-      <form [formGroup]="passordForm">
-        <h2>{{ translations.general.resetPassword }}</h2>
-        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
-          <mat-label>{{ translations.general.password }}</mat-label>
-          <input formControlName="password" type="password" matInput placeholder="Edit Your Password" />
-          <mat-error *ngIf="passordForm.controls.password.hasError('minlength')">
-            {{ translations.general.passwordMinlength }}
-          </mat-error>
-        </mat-form-field>
-        <mat-form-field class="col-xs-12 col-sm-6 col-lg-4">
-          <mat-label>{{ translations.general.password }}</mat-label>
-          <input
-            formControlName="confirmpassword"
-            type="password"
-            matInput
-            placeholder="Confirm Your Password"
-            i18n-placeholder="Confirm Your Password"
-            required
-          />
-          <mat-error *ngIf="passordForm.controls.confirmpassword.hasError('passwordmatcherror')">{{
-            translations.general.passwordMatch
-          }}</mat-error>
-        </mat-form-field>
-      </form>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button color="primary" [disabled]="passordForm.invalid" (click)="resetPassword()">
-        {{ translations.general.save }}
-      </button>
-      <button mat-raised-button color="warn" (click)="resetPasswordForm()">
-        {{ translations.general.cancel }}
-      </button>
-    </mat-card-actions>
-  </mat-card>
-</div>
+    <app-reset-password [user]="user" />
+  </div>
+}
